# harmony

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  readme.md  server_test.cpp  vcpkg.json
data/: burger.html
include/: accept_data.hpp  alias.hpp  awaitable.hpp  base_task.hpp  client.hpp  endpoint.hpp  harmony_server.hpp  http_builder.hpp  http_parser.hpp  http_request_handler.hpp  io_context.hpp  io_uring.hpp  request_data.hpp  server_runtime.hpp  server_socket.hpp  socket_context.hpp  task.hpp
src/: alias.hpp  server.cpp
src/async_runtime/: base_task.hpp  io_context.hpp  io_uring.hpp  request_data.hpp  task.hpp
src/endpoint/: endpoint.hpp  ipv4.hpp  ipv6.hpp
src/http/: http_builder.hpp  http_parser.hpp
src/server/: async_client_acceptor.hpp  async_socket.hpp  server.hpp
